add goals checklist

--- a/Class Presentations/reveal-presentations/IntroToJavascript.html
+++ b/Class Presentations/reveal-presentations/IntroToJavascript.html
@@ -120,6 +120,29 @@
 					* Javascript provides functionality/behavior to web pages allowing users to interact with them.
 					* Javascript is written in a text editor and saved with a .js extension.
 				</section>
+
+				<section>
+					<h2>Huddle</h2>
+					<ul class="checklist">
+						<li>
+							<input type="checkbox" id="goal1" checked/>
+							<label for="goal1">Intro to Javascript</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal2"/>
+							<label for="goal2">Javascript and Web Pages</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal3"/>
+							<label for="goal3">Intro to Javascript Functions</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal4"/>
+							<label for="goal4">Use a Function</label>
+						</li>
+					</ul>
+				</section>
+
 				<section>
 					<section data-markdown>
 						## `break;`
@@ -191,6 +214,28 @@
 					Citation:<a href="http://searchenterpriselinux.techtarget.com/definition/script">http://searchenterpriselinux.techtarget.com/definition/script</a>
 
 JavaScript is interpreted by the web browser (Chrome, IE, Safari…). That's why the W3 Schools site is always telling you what browsers certain elements/attributes are compatible with.
+				</section>
+
+				<section>
+					<h2>Huddle</h2>
+					<ul class="checklist">
+						<li>
+							<input type="checkbox" id="goal1" checked/>
+							<label for="goal1">Intro to Javascript</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal2" checked/>
+							<label for="goal2">Javascript and Web Pages</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal3"/>
+							<label for="goal3">Intro to Javascript Functions</label>
+						</li>
+						<li>
+							<input type="checkbox" id="goal4"/>
+							<label for="goal4">Use a Function</label>
+						</li>
+					</ul>
 				</section>
 
 				<section>
@@ -286,6 +331,28 @@ JavaScript is interpreted by the web browser (Chrome, IE, Safari…). That's why
 			<section>
 				<image src="../presentation-images/day9/javascript_function.png">
 				</section>
+			</section>
+
+			<section>
+				<h2>Huddle</h2>
+				<ul class="checklist">
+					<li>
+						<input type="checkbox" id="goal1" checked/>
+						<label for="goal1">Intro to Javascript</label>
+					</li>
+					<li>
+						<input type="checkbox" id="goal2" checked/>
+						<label for="goal2">Javascript and Web Pages</label>
+					</li>
+					<li>
+						<input type="checkbox" id="goal3" checked/>
+						<label for="goal3">Intro to Javascript Functions</label>
+					</li>
+					<li>
+						<input type="checkbox" id="goal4"/>
+						<label for="goal4">Use a Function</label>
+					</li>
+				</ul>
 			</section>
 
 			<section>
@@ -408,6 +475,29 @@ JavaScript is interpreted by the web browser (Chrome, IE, Safari…). That's why
 							talkAboutWhatWeveLearned();
 						}
 						```
+					</section>
+
+					<section>
+						<h2>Now We're Done</h2>
+						<ul class="checklist">
+							<li>
+								<input type="checkbox" id="goal1" checked/>
+								<label for="goal1">Intro to Javascript</label>
+							</li>
+							<li>
+								<input type="checkbox" id="goal2" checked/>
+								<label for="goal2">Javascript and Web Pages</label>
+							</li>
+							<li>
+								<input type="checkbox" id="goal3" checked/>
+								<label for="goal3">Intro to Javascript Functions</label>
+							</li>
+							<li>
+								<input type="checkbox" id="goal4" checked/>
+								<label for="goal4">Use a Function</label>
+							</li>
+						</ul>
+						<p text-align="right">At least...by our definition of done.</p>
 					</section>
 
 				</div>
