update slide and create sample

--- a/Class Presentations/reveal-presentations/MachineOperations.html
+++ b/Class Presentations/reveal-presentations/MachineOperations.html
@@ -71,10 +71,11 @@
 				</ul>
 			</section>
 
-			<section data-markdown>## codeReviews(){}
+			<section>
+			<section data-markdown>
+				## codeReviews(){}
 				* Review these code snippets and correct them so they function.
 			</section>
-			<section>
 				<section data-markdown>
 					```javascript
 					alertFunction(){
@@ -120,27 +121,34 @@
 			<section>A boolean is true or false.</section>
 		</section>
 
-		<section data-markdown># Tomato Tomato Again!</section>
-		<section data-markdown>## But first… More Vocabulary Words!</section>
-		<section data-markdown>## Operator
+		<section data-markdown>
+			# Tomato Tomato Again!
+		</section>
+		<section data-markdown>
+			## But first… More Vocabulary Words!
+		</section>
+		<section data-markdown>
+			## Operator
 			* An operator is a symbol used to assign or compare values and complete arithmetic.
 		</section>
-		<section data-markdown> ## The Assignment Operator
+		<section data-markdown>
+			## The Assignment Operator
 			=
 			* is used to assign a value to a variable.
 			Example:
 			var three = 3; This assigns the value of 3 to the variable three.
 		</section>
 
-		<section>
-		  <section data-markdown> ## Math Operators
+		  <section data-markdown>
+				## Math Operators
 		    We’ll start with familiar faces...
 		    + : Addition - is used to add variable values together.
 		    - : Subtraction - is used to subtract variable values from one another.
 		    *: Multiplication - is used to multiply variable values together
 		    / : Division - is used to divide variable values from one another.
 		  </section>
-		  <section data-markdown> ##Math Operators Cont.
+		  <section data-markdown>
+				## Math Operators Cont.
 		    Now for some new friends…
 		    % : Modulus - is used to get the reminder in a division
 		    ++ : Increment - is used to count up by one
@@ -153,17 +161,18 @@
 
 		    Cite: http://www.w3schools.com/jsref/jsref_operators.asp
 		  </section>
-		</section>
 
 		<section>
-		  <section data-markdown>## break;
+		  <section data-markdown>
+				## break;
 		    What is the value of seven?
 
 		    var five = 5;
 		    var two = 3;
 		    var seven = five + two;
 		  </section>
-		  <section data-markdown>## continue;
+		  <section data-markdown>
+				## continue;
 		    The value of seven is 8.
 		    Wait! What?
 		    Yup… because the variable five was assigned a value of 5 and the variable two was assigned the value of 3. The variable seven is assigned the value of those variables added together.
@@ -176,15 +185,18 @@
 		  </section>
 		</section>
 
-		<section data-markdown># #Other Words to Know
+		<section data-markdown>
+			## Other Words to Know
 		  **Expression** is a combination of variables, values and operators that produces a value.
 		  Var number = 2 + 4 is an expression.
 		  **Comments** are notes developers write to document their code
 		  //This is a comment. It’s text preceded by //
 
 		  Cite: http://www.w3schools.com/js/js_syntax.asp
+		</section>
 
-		  <section data-markdown>## Caution! Reserved Words Ahead
+		  <section data-markdown>
+				## Caution! Reserved Words Ahead
 		    There are some words you need to know to not use in your code. These words are **Reserved**. They are Javascript’s keywords and should not be used in naming functions, variables or objects.
 		    *function
 		    *var
@@ -192,25 +204,30 @@
 
 		    And more! Checkout the link for the complete list.
 		    Cite: http://www.w3schools.com/js/js_reserved.asp
+</section>
 
-		    <section>
-		      <section data-markdown>## break;
+				<section>
+		      <section data-markdown>
+						## break;
 		        What’s wrong with this code?
 
 		        someName = prompt(“Enter your name)
 
 		      </section>
-		      <section data-markdown>## continue;
+		      <section data-markdown>
+						## continue;
 
 		        **var** someName = prompt(“Enter your name**”**)**;**
 		      </section>
 		    </section>
 
-		    <section data-markdown>## End It!
+		    <section data-markdown>
+					## End It!
 		      Each expression must end in a semi-colon.
 		    </section>
 
-		    <section data-markdown>## Conditional Operators
+		    <section data-markdown>
+					## Conditional Operators
 		      > : Greater Than - evaluates if the variable on the left is greater than the right
 		      >= : Greater Than or Equal To - evaluates if the variable on the left is greater than or equal to the right
 		      < : Less Than - evaluates if the variable on the left is less than the right
@@ -221,11 +238,13 @@
 		      !== : Not Equals - evaluates if the variable on the left is **not** equal in value and type to the right
 		    </section>
 
-		    <section data-markdown>## Logical Operators
+		    <section data-markdown>
+					## Logical Operators
 		      && : And - used to evaluate if both are true or false
 		      || : Or - used to evaluate if one or another is true or false
 		      ! : Not - used to evaluate the negative of a true or false
 		    </section>
+
 		    <section data-markdown>
 		      ```javascript
 		      function logicalOperator(x, y){
@@ -243,7 +262,6 @@
 		      }
 		    }```
 		  </section>
-		  <aside> Give x and y different values and ask the class which statement will print</aside>
 
 		  <section>
 		    <h2>Huddle</h2>
@@ -267,7 +285,8 @@
 		    </ul>
 		  </section>
 
-		  <section data-markdown>## Business Sense
+		  <section data-markdown>
+				## Business Sense
 		    It takes many different people to get a successful project out the door and in the market. Each one is important, but business usually starts with team members in business development.
 
 		    Business development
@@ -277,7 +296,8 @@
 		    For this exercise you’ll need your Website Idea creative expression.
 		  </section>
 
-		  <section data-markdown>## try{youAreInBusiness()}
+		  <section data-markdown>
+				## try{youAreInBusiness()}
 
 		    A company opened up a RFP, Request for Proposal. You’re really interested in doing this work for them. Read over the website idea.
 
@@ -287,11 +307,13 @@
 		    https://en.wikipedia.org/wiki/Request_for_proposal
 		  </section>
 
-		  <section data-markdown>## designYourTeam(){}
+		  <section data-markdown>
+				## designYourTeam(){}
 		    Who do you need on the team to complete the project?
 		  </section>
 
-		  <section data-markdown>## buildYourTeam(){}
+		  <section data-markdown>
+				## buildYourTeam(){}
 
 		    Your company has:
 		    *Developers | rate: $100/hour
@@ -325,11 +347,13 @@
 		    </ul>
 		  </section>
 
-		  <section data-markdown>## It Depends
+		  <section data-markdown>
+				## It Depends
 		    We’ve reviewed some simple functions that printed on the console or popped up on the screen. But, what if you were only supposed to print if the name the person entered is longer than 2 characters?
 		  </section>
 
-		  <section data-markdown>## If, Else, Else If
+		  <section data-markdown>
+				## If, Else, Else If
 		    The keyword **if** is used to evaluate if a condition is true. If it is then the code inside it will be executed.
 		    **else if** is used to add another conditional to be evaluated for true. If it is true then the code inside will be executed.
 		    **else** is used to execute code when the previous if condition is false. If it is false then the code inside will be executed.
@@ -337,18 +361,21 @@
 		    http://www.w3schools.com/jsref/jsref_if.asp
 		  </section>
 
-		  <section data-markdown>## Five Minutes of Struggle
+		  <section data-markdown>
+				## Five Minutes of Struggle
 		    Update the onclick2.js file to only add the name to the page if the user entered text greater than 2 characters.
 
 		    Hint: http://www.w3schools.com/js/js_string_methods.asp
 
 		  </section>
 
-		  <section data-markdown>## Switch
+		  <section data-markdown>
+				## Switch
 		    Sometimes you have to evaluate a number of conditions for one function. In times like those, instead of if..else if… else if… else if… else, you can use a switch statement.
 
 		    **switch** evaluates if one or more multiple conditions are true. If so, the code inside the block will be executed.
 		  </section>
+
 		  <section data-markdown>
 		    What is this function doing?
 
