Update date and What Do You Remember section

--- a/Class Presentations/reveal-presentations/ControlStructures.html
+++ b/Class Presentations/reveal-presentations/ControlStructures.html
@@ -41,7 +41,7 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h1>Control Structures (04/11/2016)</h1>
+					<h1>Control Structures (04/21/2016)</h1>
 					<h3>D-Code</h3>
 				</section>
 
@@ -79,14 +79,79 @@
 					</ul>
 				</section>
 
-				<section data-markdown>
-					```javascript
-					try {
-						whatDoYouRemember();
-					}
-					```
-					</p>
+				<section>
+					<section data-markdown>
+						```javascript
+						try {
+							whatDoYouRemember();
+						}
+						```
+					</section>
+					<section>
+						<p> What is an operator? What are some examples?</p>
+					</section>
+					<section>
+						<p> An operator is a symbol used to assign or compare values and complete arithmetic</p>
+						<p> Examples:  +, -, *, /, % </p>
+					</section>
+					<section>
+						<p> What is the % operator?</p>
+					</section>
+					<section>
+						<p> Modulus - calculates the remainder from division</p>
+					</section>
+					<section>
+						<p> What does the ++ operator do? And what is it called?</p>
+					</section>
+					<section>
+						<p> The increment operator increases a variable's value by 1. </p>
+					</section>
+					<section>
+						<p> What does the -- operator do? And what is it called?</p>
+					</section>
+					<section>
+						<p> The decrement operator decreases a variable's value by 1. </p>
+					</section>
+					<section>
+						<p> What is an expression in JavaScript? (You can give a definition or an example)</p>
+					</section>
+					<section>
+						<p> A combination of variables, values, and operators that produces a value. </p>
+						<p> var myAge = 2 + 23; </p>
+					</section>
+					<section>
+						<p> What should you put at the end of every expression in JavaScript?</p>
+					</section>
+					<section>
+						<p> A semicolon (;) </p>
+					</section>
+					<section>
+						<p> How do you assign a value to a variable? (What if we wanted to make height 20, for example?)</p>
+					</section>
+					<section>
+						<p> height = 20;</p>
+						<p> var height = 20;  (if the variable does not exist yet)</p>
+					</section>
+					<section>
+						<p> What are reserved words? </p>
+					</section>
+					<section>
+						<p> Words you shouldn't use to name functions, variables, or objects because they have
+						special meaning in JavaScript. </p>
+					</section>
+					<section>
+						<p> What kinds of operators are these? What do they do? </p>
+						<h2> &amp;&amp;, ||, ! </h2>
+					</section>
+					<section>
+						<p>They're called logical operators.</p>
+						<p class="fragment">&amp;&amp;: evaluates if both are true (color===red &amp;&amp; shape===circle) </p>
+						<p class="fragment">||: evaluates if either one is true (age >= 17 || withGuardian===true) </p>
+						<p class="fragment"> ! : used to evaluate the negative of a condition. </p>
+						<p class="fragment">	!color===red will return true for color===blue, color===green, etc. </p>
+					</section>
 				</section>
+
 
 				<section>
 					<h2>What are control structures?</h2>
