fix typo and add coding examples

--- a/Class Presentations/reveal-presentations/MachineOperations.html
+++ b/Class Presentations/reveal-presentations/MachineOperations.html
@@ -305,7 +305,7 @@
 					console.log(“x is greater than y”);
 				}
 				else if(x < 2 && y > x){
-				console.log(“x is greater than 2 AND y is greater than x);}
+				console.log(“x is less than 2 AND y is greater than x);}
 			else{
 				console.log(“We need to add more conditionals!”);}
 		}```
