--- a/Coding Examples/simple_calc_example.html
+++ b/Coding Examples/simple_calc_example.html
@@ -5,7 +5,8 @@
   <script>
   var operator
   var firstNumber;
-
+  var secondNumber;
+  
    function startCalc(){
      operation = prompt("Enter an operator");
      firstNumber = prompt("Enter a number");
