fix date and add slides for exercises and survey

--- a/Class Presentations/reveal-presentations/MachineOperations.html
+++ b/Class Presentations/reveal-presentations/MachineOperations.html
@@ -41,7 +41,7 @@
 		<!-- Any section element inside of this container is displayed as a slide -->
 		<div class="slides">
 			<section>
-				<h1>04/07/2016</h1>
+				<h1>04/18/2016</h1>
 				<h3>D-Code</h3>
 			</section>
 
@@ -481,6 +481,44 @@
 		</ul>
 	</section>
 
+	<sectio data-markdown>
+		## Open the simple_calc_example.html
+		* Try it output
+		* Now make the other operations work using the function stubs provided
+		* Add comments about at how would you iterate on this web page to make it better?
+	</section>
+
+	<section data-markdown>
+		## Open machineOps.html
+		* Add javascript to complete the challenges in each div
+	</section>
+
+	<section>
+		<h2>Huddle</h2>
+		<ul class="checklist">
+			<li>
+				<input type="checkbox" id="goal1" checked/>
+				<label for="goal1">JS Syntax</label>
+			</li>
+			<li>
+				<input type="checkbox" id="goal2" checked/>
+				<label for="goal2">Development Planning</label>
+			</li>
+			<li>
+				<input type="checkbox" id="goal3" checked/>
+				<label for="goal3">Common Conditionals</label>
+			</li>
+			<li>
+				<input type="checkbox" id="goal4" checked/>
+				<label for="goal4">Making It Work</label>
+			</li>
+		</ul>
+	</section>
+
+	<section data-markdown>
+		## We are interested in your opinions!
+		Please complete this survey  http://goo.gl/forms/2YG2Bqs6fz so we can continue to improve the program.
+	</section>
 
 </div>
 
