Fix a few typos

--- a/Class Presentations/reveal-presentations/MachineOperations.html
+++ b/Class Presentations/reveal-presentations/MachineOperations.html
@@ -282,7 +282,7 @@
 
 		<section data-markdown>
 			## Logical Operators
-			&& : And - used to evaluate if both are true or false
+			&amp;&amp; : And - used to evaluate if both are true or false
 			<br>
 			|| : Or - used to evaluate if one or another is true or false
 			<br>
@@ -304,7 +304,7 @@
 				else if(x > y){
 					console.log(“x is greater than y”);
 				}
-				else if(x < 2 && y > x){
+				else if(x < 2 &amp;&amp; y > x){
 				console.log(“x is less than 2 AND y is greater than x);}
 			else{
 				console.log(“We need to add more conditionals!”);}
@@ -370,7 +370,9 @@
 		* QAs| rate: $100/hour
 		* Project Managers | rate: $100/hour
 
-		The project budget is $50,000 and they want it shipped in no more than 2 months. Your developers have told you it’s about 300 hours worth of work. Your designer will need at least 50 hours to complete the design.
+		The project budget is $50,000 and they want it shipped in no more than 2 months.
+		Your developers have told you it’s about 300 hours worth of work for a pair of them.
+		Your designer will need at least 50 hours to complete the design.
 		<br>
 		Based on that, how will you staff this project?
 	</section>
@@ -453,7 +455,7 @@
 			}
 		}```
 
-		When color = blue, what happens?
+		When color === blue, what happens?
 		<br>
 		Cite: http://www.w3schools.com/jsref/jsref_switch.asp
 
@@ -481,11 +483,11 @@
 		</ul>
 	</section>
 
-	<sectio data-markdown>
+	<section data-markdown>
 		## Open the simple_calc_example.html
-		* Try it output
+		* Try it out
 		* Now make the other operations work using the function stubs provided
-		* Add comments about at how would you iterate on this web page to make it better?
+		* Add comments about how you would iterate on this web page to make it better
 	</section>
 
 	<section data-markdown>
