Add Making it Work to Switch section

--- a/Class Presentations/reveal-presentations/ControlStructures.html
+++ b/Class Presentations/reveal-presentations/ControlStructures.html
@@ -504,7 +504,7 @@
 			</section>
 
 			<section data-markdown>
-				## Switch (Does anyone know that Will Smith song? How old are y'all?)
+				## Switch (Does anyone know that Will Smith song?)
 			</section>
 
 			<section>
@@ -545,6 +545,18 @@
 			<section>
 				<h2>Try it yourself!</h2>
 				<p>Create your own switch statement.</p>
+			</section>
+
+			<section data-markdown>
+				## Open the simple_calc_example.html
+				* Try it out
+				* Now make the other operations work using the function stubs provided
+				* Add comments about how you would iterate on this web page to make it better
+			</section>
+
+			<section data-markdown>
+				## Open machineOps.html
+				* Add javascript to complete the challenges in each div
 			</section>
 
 			<section>
